examples/invalid/program36.c
int main(void) {
    int x;
    x = 5;
    if (x > 0) {
        return 1;
    } else {
        return 0;
    }
    return 2;
}

